# scq

./: CMakeLists.txt  README.md
include/scq/: scq.hpp
include/scqueue/: detail.hpp  scq.hpp  scq2.hpp  scq2_fwd.hpp  scq_fwd.hpp  scqd.hpp  scqd_fwd.hpp
include/scqueue/detail/: detail.hpp  scq1.hpp  scq1_fwd.hpp
test/: test_scq.cpp  test_simple.cpp  test_simple_scq2.cpp
